--- a/models/MODELING-Finacial.ipynb
+++ b/models/MODELING-Finacial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -12,15 +12,16 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import linear_model\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data2009 = pd.read_csv('/Users/gregdhillon/modelingProject/FINISHED_DATA/metadata_Income/Data2009.csv')\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -81,14 +82,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                            -0.535540\n",
+       "Median income                  -0.474892\n",
+       "YEAR                           -0.089991\n",
+       "Total Income                    0.097417\n",
+       "Unemployment_rate               0.181135\n",
+       "Chronic respiratory diseases    0.295207\n",
+       "Cardiovascular diseases         0.363529\n",
+       "Nutritional deficiencies        0.374579\n",
+       "HIV/AIDS and tuberculosis       0.463471\n",
+       "Crime_rate                      1.000000\n",
+       "Name: Crime_rate, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_data.corr()['Crime_rate'].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import sklearn as sk\n",
     "categories = ['Cardiovascular diseases',\n",
     "       'Chronic respiratory diseases', 'HIV/AIDS and tuberculosis',\n",
     "       'Nutritional deficiencies', 'Age', 'Unemployment_rate', 'Median income']\n",
@@ -97,6 +134,150 @@
     "X_test = data2014[categories]\n",
     "y_test = data2014[['Crime_rate']]\n",
     "#X_train, X_test, y_train, y_test = sk.model_selection.train_test_split(X, Y, test_size=0.1, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OLS Linear Regession/Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>Crime_rate</td>    <th>  R-squared:         </th> <td>   0.919</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.919</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   6161.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sun, 09 Jun 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>17:24:13</td>     <th>  Log-Likelihood:    </th> <td> -34142.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>  3792</td>      <th>  AIC:               </th> <td>6.830e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>  3785</td>      <th>  BIC:               </th> <td>6.834e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     7</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "                <td></td>                  <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Cardiovascular diseases</th>      <td>   -0.1591</td> <td>    1.020</td> <td>   -0.156</td> <td> 0.876</td> <td>   -2.159</td> <td>    1.841</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Chronic respiratory diseases</th> <td>   32.1706</td> <td>    3.428</td> <td>    9.385</td> <td> 0.000</td> <td>   25.450</td> <td>   38.891</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>HIV/AIDS and tuberculosis</th>    <td>  497.8014</td> <td>   16.628</td> <td>   29.937</td> <td> 0.000</td> <td>  465.201</td> <td>  530.402</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Nutritional deficiencies</th>     <td>  689.9916</td> <td>   62.248</td> <td>   11.084</td> <td> 0.000</td> <td>  567.948</td> <td>  812.035</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>                          <td>   70.1731</td> <td>    4.229</td> <td>   16.593</td> <td> 0.000</td> <td>   61.881</td> <td>   78.465</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Unemployment_rate</th>            <td>  -29.6795</td> <td>   13.769</td> <td>   -2.156</td> <td> 0.031</td> <td>  -56.675</td> <td>   -2.684</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Median income</th>                <td>   -0.0526</td> <td>    0.003</td> <td>  -16.369</td> <td> 0.000</td> <td>   -0.059</td> <td>   -0.046</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>204.462</td> <th>  Durbin-Watson:     </th> <td>   1.753</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td> 791.085</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.066</td>  <th>  Prob(JB):          </th> <td>1.65e-172</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 5.234</td>  <th>  Cond. No.          </th> <td>1.04e+05</td> \n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:             Crime_rate   R-squared:                       0.919\n",
+       "Model:                            OLS   Adj. R-squared:                  0.919\n",
+       "Method:                 Least Squares   F-statistic:                     6161.\n",
+       "Date:                Sun, 09 Jun 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        17:24:13   Log-Likelihood:                -34142.\n",
+       "No. Observations:                3792   AIC:                         6.830e+04\n",
+       "Df Residuals:                    3785   BIC:                         6.834e+04\n",
+       "Df Model:                           7                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "================================================================================================\n",
+       "                                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------------------\n",
+       "Cardiovascular diseases         -0.1591      1.020     -0.156      0.876      -2.159       1.841\n",
+       "Chronic respiratory diseases    32.1706      3.428      9.385      0.000      25.450      38.891\n",
+       "HIV/AIDS and tuberculosis      497.8014     16.628     29.937      0.000     465.201     530.402\n",
+       "Nutritional deficiencies       689.9916     62.248     11.084      0.000     567.948     812.035\n",
+       "Age                             70.1731      4.229     16.593      0.000      61.881      78.465\n",
+       "Unemployment_rate              -29.6795     13.769     -2.156      0.031     -56.675      -2.684\n",
+       "Median income                   -0.0526      0.003    -16.369      0.000      -0.059      -0.046\n",
+       "==============================================================================\n",
+       "Omnibus:                      204.462   Durbin-Watson:                   1.753\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              791.085\n",
+       "Skew:                           0.066   Prob(JB):                    1.65e-172\n",
+       "Kurtosis:                       5.234   Cond. No.                     1.04e+05\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 1.04e+05. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = sm.OLS(y_train, X_train).fit()\n",
+    "predictions = model.predict(X_test)\n",
+    "model.summary()"
    ]
   },
   {
@@ -287,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import xgboost\n",
@@ -689,13 +872,7 @@
       "3792/3792 [==============================] - 1s 165us/step - loss: 1703.5918 - mean_absolute_error: 1703.5918\n",
       "Epoch 61/100\n",
       "3792/3792 [==============================] - 1s 166us/step - loss: 1704.1057 - mean_absolute_error: 1704.1057\n",
-      "Epoch 62/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 62/100\n",
       "3792/3792 [==============================] - 1s 166us/step - loss: 1690.6120 - mean_absolute_error: 1690.6120\n",
       "Epoch 63/100\n",
       "3792/3792 [==============================] - 1s 163us/step - loss: 1681.0845 - mean_absolute_error: 1681.0845\n",
@@ -1246,13 +1423,7 @@
       "3792/3792 [==============================] - 1s 166us/step - loss: 1292.4825 - mean_absolute_error: 1292.4825\n",
       "Epoch 66/100\n",
       "3792/3792 [==============================] - 1s 167us/step - loss: 1292.2561 - mean_absolute_error: 1292.2561\n",
-      "Epoch 67/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 67/100\n",
       "3792/3792 [==============================] - 1s 169us/step - loss: 1285.5860 - mean_absolute_error: 1285.5860\n",
       "Epoch 68/100\n",
       "3792/3792 [==============================] - 1s 164us/step - loss: 1290.0646 - mean_absolute_error: 1290.0646\n",
