--- a/models/MODELING.ipynb
+++ b/models/MODELING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -12,14 +12,21 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import linear_model\n",
+    "import sklearn\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Loading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -83,14 +90,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                            -0.275623\n",
+       "YEAR                           -0.037061\n",
+       "Chronic respiratory diseases    0.122393\n",
+       "Nutritional deficiencies        0.136693\n",
+       "Cardiovascular diseases         0.176481\n",
+       "Unemployment_rate               0.243807\n",
+       "HIV/AIDS and tuberculosis       0.432302\n",
+       "Crime_rate                      1.000000\n",
+       "Name: Crime_rate, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_data.corr()['Crime_rate'].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import sklearn as sk\n",
     "categories = ['Cardiovascular diseases',\n",
     "       'Chronic respiratory diseases', 'HIV/AIDS and tuberculosis',\n",
     "       'Nutritional deficiencies', 'Age', 'Unemployment_rate']\n",
@@ -105,12 +146,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# OLS Linear Regession/Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>Crime_rate</td>    <th>  R-squared:         </th>  <td>   0.784</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.784</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   8825.</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sun, 09 Jun 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>17:11:43</td>     <th>  Log-Likelihood:    </th> <td>-1.3532e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td> 14587</td>      <th>  AIC:               </th>  <td>2.707e+05</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td> 14581</td>      <th>  BIC:               </th>  <td>2.707e+05</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     6</td>      <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "                <td></td>                  <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Cardiovascular diseases</th>      <td>   -2.9548</td> <td>    0.508</td> <td>   -5.819</td> <td> 0.000</td> <td>   -3.950</td> <td>   -1.959</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Chronic respiratory diseases</th> <td>   25.5818</td> <td>    1.761</td> <td>   14.527</td> <td> 0.000</td> <td>   22.130</td> <td>   29.034</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>HIV/AIDS and tuberculosis</th>    <td>  699.5640</td> <td>   14.019</td> <td>   49.901</td> <td> 0.000</td> <td>  672.085</td> <td>  727.043</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Nutritional deficiencies</th>     <td>   24.0570</td> <td>   36.209</td> <td>    0.664</td> <td> 0.506</td> <td>  -46.917</td> <td>   95.031</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>                          <td>   25.6993</td> <td>    1.305</td> <td>   19.686</td> <td> 0.000</td> <td>   23.140</td> <td>   28.258</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Unemployment_rate</th>            <td>   90.2310</td> <td>    7.839</td> <td>   11.511</td> <td> 0.000</td> <td>   74.866</td> <td>  105.596</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>15364.852</td> <th>  Durbin-Watson:     </th>  <td>   1.855</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>   <th>  Jarque-Bera (JB):  </th> <td>7525973.620</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>           <td> 4.573</td>   <th>  Prob(JB):          </th>  <td>    0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>       <td>113.900</td>  <th>  Cond. No.          </th>  <td>    510.</td>  \n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:             Crime_rate   R-squared:                       0.784\n",
+       "Model:                            OLS   Adj. R-squared:                  0.784\n",
+       "Method:                 Least Squares   F-statistic:                     8825.\n",
+       "Date:                Sun, 09 Jun 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        17:11:43   Log-Likelihood:            -1.3532e+05\n",
+       "No. Observations:               14587   AIC:                         2.707e+05\n",
+       "Df Residuals:                   14581   BIC:                         2.707e+05\n",
+       "Df Model:                           6                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "================================================================================================\n",
+       "                                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------------------\n",
+       "Cardiovascular diseases         -2.9548      0.508     -5.819      0.000      -3.950      -1.959\n",
+       "Chronic respiratory diseases    25.5818      1.761     14.527      0.000      22.130      29.034\n",
+       "HIV/AIDS and tuberculosis      699.5640     14.019     49.901      0.000     672.085     727.043\n",
+       "Nutritional deficiencies        24.0570     36.209      0.664      0.506     -46.917      95.031\n",
+       "Age                             25.6993      1.305     19.686      0.000      23.140      28.258\n",
+       "Unemployment_rate               90.2310      7.839     11.511      0.000      74.866     105.596\n",
+       "==============================================================================\n",
+       "Omnibus:                    15364.852   Durbin-Watson:                   1.855\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):          7525973.620\n",
+       "Skew:                           4.573   Prob(JB):                         0.00\n",
+       "Kurtosis:                     113.900   Cond. No.                         510.\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = sm.OLS(y_train, X_train).fit()\n",
+    "predictions = model.predict(X_test)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Gradient Boosting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.05446362 0.12512443 0.6246197  0.04814195 0.10724102 0.04040929]\n",
+      "[0.05426337 0.12520239 0.60349546 0.04770605 0.1285621  0.04077063]\n",
       "R-squared for Train: 0.41\n",
       "R-squared for Test: 0.33\n"
      ]
@@ -165,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +580,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -550,13 +731,7 @@
       "14587/14587 [==============================] - 2s 168us/step - loss: 1483.0207 - mean_absolute_error: 1483.0207\n",
       "Epoch 65/100\n",
       "14587/14587 [==============================] - 2s 169us/step - loss: 1476.6436 - mean_absolute_error: 1476.6436\n",
-      "Epoch 66/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 66/100\n",
       "14587/14587 [==============================] - 2s 168us/step - loss: 1474.6066 - mean_absolute_error: 1474.6066\n",
       "Epoch 67/100\n",
       "14587/14587 [==============================] - 2s 168us/step - loss: 1470.3668 - mean_absolute_error: 1470.3668\n",
@@ -1078,13 +1253,7 @@
       "14587/14587 [==============================] - 3s 175us/step - loss: 903.9940 - mean_absolute_error: 903.9940\n",
       "Epoch 65/100\n",
       "14587/14587 [==============================] - 3s 175us/step - loss: 901.8617 - mean_absolute_error: 901.8617\n",
-      "Epoch 66/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 66/100\n",
       "14587/14587 [==============================] - ETA: 0s - loss: 896.1533 - mean_absolute_error: 896.153 - 3s 174us/step - loss: 898.5844 - mean_absolute_error: 898.5844\n",
       "Epoch 67/100\n",
       "14587/14587 [==============================] - 3s 174us/step - loss: 897.4528 - mean_absolute_error: 897.4528\n",
